# LowLatencyRemoteSystem

./: AGENTS.md  CMakeLists.txt  LowLatencyRemoteSystem.slnx  README.md  run-debug-gui.cmd  run-local.ps1
LowLatencyRemoteSystem/: LowLatencyRemoteClient.vcxproj  LowLatencyRemoteClient.vcxproj.filters  LowLatencyRemoteDebugGui.vcxproj  LowLatencyRemoteDebugGui.vcxproj.filters  LowLatencyRemoteLauncher.vcxproj  LowLatencyRemoteLauncher.vcxproj.filters  LowLatencyRemoteSystem.cpp  LowLatencyRemoteSystem.vcxproj  LowLatencyRemoteSystem.vcxproj.filters
apps/client/: ClientApp.cpp  ClientApp.h  main.cpp
apps/debug_gui/: main.cpp
apps/host/: HostApp.cpp  HostApp.h  main.cpp
apps/launcher/: main.cpp
build-cmake-vs18/: CMakeCache.txt
build-vs18/: CMakeCache.txt
docs/: architecture.md  gui-plan.md  latency-budget.md  protocol.md  roadmap.md  runbook.md
src/capture/: DxgiAdapterEnumerator.cpp  DxgiAdapterEnumerator.h  DxgiDuplicator.cpp  DxgiDuplicator.h  ICaptureSource.h
src/common/: ByteBuffer.h  Clock.h  Log.h  RawFrameUtils.h  Result.h  RingBuffer.h
src/decode/: IVideoDecoder.h  MfH264Decoder.cpp  MfH264Decoder.h
src/encode/: DummyRawFrameGenerator.h  IVideoEncoder.h  MfH264Encoder.cpp  MfH264Encoder.h
src/input/: ClientInputCapture.cpp  ClientInputCapture.h  InputEvents.h  InputInjector.cpp  InputInjector.h
src/net/: JitterBuffer.h  Packet.h  PacketReassembler.h  RateController.h
src/protocol/: Messages.h  Protocol.h  Serializer.h
src/render/: D3D11Renderer.cpp  D3D11Renderer.h
src/transport/: ITransport.h  TcpControlChannel.cpp  (+3 more)
